--- a/NEWS
+++ b/NEWS
@@ -379,8 +379,21 @@ version 1.0.8: (2017-08-03)
 - Minor bugs fixed in BASiCS_TestDE
 - 'EviThreshold' arg replaced by 'ProbThreshold' in 'BASiCS_HVG' + 'BASiCS_LVG'
 - Vignette updated accordingly
+
+version 1.0.9: (2017-08-04)
+- newBASiCS_Data : added check to ensure SpikeInfo is a data.frame
+- BASiCS_TestDE : default value for EpsilonM & EpsilonD has changed
+- Vignette + examples updated accordingly
+
+
+
   
 - TODO:
+  * Bug reports:
+    - newBASiCS_Data complains when ERCCs are not in the same order
+    - Add check for data.frame, not data.table!
+    - Name of gene as main in traceplot
+    - Wrong default value for LCF threshold in BASiCS_TestDE
   * Compile vignette + pdf manual for revision
   * Change plots to use ggplot2
   * Should we separate BASiCS_TestDE in two functions : different tol for DE ? 
